fix double spacing when an accordion is opened

--- a/src/Accordion.css
+++ b/src/Accordion.css
@@ -49,6 +49,7 @@
 
 .accordion__panel {
 	padding: 20px;
+	padding-bottom: 0px;
 	animation: fadein 0.35s ease-in;
 }
 
